# lu-decomposition-mpi

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  job.sh  main.c  matrix.c  matrix.h  sh.py
